Added content for “Trunk” portfolio piece

--- a/index.html
+++ b/index.html
@@ -151,28 +151,55 @@ layout: default
         </a>
         <div class="unit text">
             <div class="portfolio-title-div">
-              <h3 class="unit portfolio-title">Album Artwork Re-Creation</h3>
-              <p class="portfoliosubheads">re-designing some of my favourite albums for a self project [ with exception of TRUNK album ]</p>
+              <h3 class="unit portfolio-title">Trunk album cover &amp; booklet design</h3>
+              <p class="portfoliosubheads">digital art pieces made in Illustrator for Ottawa band album cover and booklet</p>
             </div>
             <div class="portfoliocontent">
               <div class="grid">
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/albums/tameimpala.jpg" class="portimages">
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+                  <img src="images/trunk/process1.jpg" class="portimages" alt="album art process one">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+                  <img src="images/trunk/process2.jpg" class="portimages" alt="album art process two">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+                  <img src="images/trunk/process3.jpg" class="portimages" alt="album art process three">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+                  <img src="images/trunk/process4.jpg" class="portimages" alt="album art process four">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/albums/glassanimals.jpg" class="portimages">
+                  <img src="images/trunk/cover.jpg" class="portimages" alt="trunk album cover">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/albums/jonimitchell.jpg" class="portimages">
+                  <img src="images/trunk/application.jpg" class="portimages" alt="trunk album cover application on vinyl">
                 </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/albums/af-1.jpg" class="portimages">
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                  <img src="images/trunk/1.jpg" class="portimages" alt="digital album art piece one">
                 </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/albums/timbertimbre.jpg" class="portimages">
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                  <img src="images/trunk/2.jpg" class="portimages" alt="digital album art piece two">
                 </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/albums/trunk.jpg" class="portimages">
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                  <img src="images/trunk/3.jpg" class="portimages" alt="digital album art piece three">
+                </div> 
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                  <img src="images/trunk/4.jpg" class="portimages" alt="digital album art piece four">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                  <img src="images/trunk/5.jpg" class="portimages" alt="digital album art piece five">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                  <img src="images/trunk/6.jpg" class="portimages" alt="digital album art piece six">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                  <img src="images/trunk/7.jpg" class="portimages" alt="digital album art piece seven">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                  <img src="images/trunk/8.jpg" class="portimages" alt="digital album art piece eight">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                  <img src="images/trunk/9.jpg" class="portimages" alt="digital album art piece nine">
                 </div>
               </div>
             </div>
