Added portfolio info to “2001” piece

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ layout: default
               <h3 class="unit portfolio-title">Old James</h3>
               <p class="portfoliosubheads">logo Re-Brand for Toronto/Ottawa band</p>
             </div>
-            <div class="portfoliocontent">
+            <div class="portfoliocontent portfolio-content">
               <div class="grid">
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
                   <img src="images/oldjames/oldj1.jpg" class="portimages" alt="old james logo version one">
@@ -154,7 +154,7 @@ layout: default
               <h3 class="unit portfolio-title">Trunk album cover &amp; booklet design</h3>
               <p class="portfoliosubheads">digital art pieces made in Illustrator for Ottawa band album cover and booklet</p>
             </div>
-            <div class="portfoliocontent">
+            <div class="portfoliocontent portfolio-content">
               <div class="grid">
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
                   <img src="images/trunk/process1.jpg" class="portimages" alt="album art process one">
@@ -212,22 +212,37 @@ layout: default
         </a>
         <div class="unit text">
             <div class="portfolio-title-div">
-              <h3 class="unit portfolio-title">Wine Bottle Brand</h3>
-              <p class="portfoliosubheads">Future personal brand for self wine making</p>
+              <h3 class="unit portfolio-title">Liquid Happiness : Wine &amp; liquor Bottle Brand</h3>
+              <p class="portfoliosubheads">Future personal brand for self liquor and wine making</p>
             </div>
-            <div class="portfoliocontent">
+            <div class="portfoliocontent portfolio-content">
               <div class="grid">
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/liquidhappiness/sketches-1.jpg" class="portimages">
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                  <img src="images/liquidhappiness/sketches-1.jpg" class="portimages" alt="liquid happiness sketches">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                  <img src="images/liquidhappiness/mockups.jpg" class="portimages" alt="liquid happiness mockups">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                  <img src="images/liquidhappiness/final.jpg" class="portimages" alt="liquid happiness final logo">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/liquidhappiness/mockups.jpg" class="portimages">
+                  <img src="images/liquidhappiness/chardonnay.jpg" class="portimages" alt="liquid happiness chardonnay application">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/liquidhappiness/final.jpg" class="portimages">
+                  <img src="images/liquidhappiness/pinogrigio.jpg" class="portimages" alt="liquid happiness pinot grigio application">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/covers/liquidhappinesscover.jpg" class="portimages">
+                  <img src="images/liquidhappiness/rose.jpg" class="portimages" alt="liquid happiness rose application">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/liquidhappiness/merlot.jpg" class="portimages" alt="liquid happiness merlot application">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/liquidhappiness/gin.jpg" class="portimages" alt="liquid happiness gin application">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/liquidhappiness/whiskey.jpg" class="portimages" alt="liquid happiness whiskey application">
                 </div>
               </div>
             </div>
@@ -243,25 +258,25 @@ layout: default
               <h3 class="unit portfolio-title">Haunt : Photography</h3>
               <p class="portfoliosubheads">Photograph series mirroring the haunting of human fears [taken with Polaroid camera] </p>
             </div>
-            <div class="portfoliocontent">
+            <div class="portfoliocontent portfolio-content">
               <div class="grid">
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/haunt/haunt1.jpg" class="portimages">
+                  <img src="images/haunt/haunt1.jpg" class="portimages" alt="photo of ghost like figure in bushes">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/haunt/haunt2.jpg" class="portimages">
+                  <img src="images/haunt/haunt2.jpg" class="portimages" alt="photo of ghost like figure in spider webs">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/haunt/haunt3.jpg" class="portimages">
+                  <img src="images/haunt/haunt3.jpg" class="portimages" alt="photo of ghost like figure in front of tree">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/haunt/haunt4.jpg" class="portimages">
+                  <img src="images/haunt/haunt4.jpg" class="portimages" alt="close up of ghost like figure">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/haunt/haunt5.jpg" class="portimages">
+                  <img src="images/haunt/haunt5.jpg" class="portimages" alt="photo of ghost like figure in bare open area">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/haunt/haunt6.jpg" class="portimages">
+                  <img src="images/haunt/haunt6.jpg" class="portimages" alt="photo of ghost like figure in front of concrete tunnel">
                 </div>
               </div>
             </div>
@@ -277,43 +292,43 @@ layout: default
               <h3 class="unit portfolio-title">Sun, moon, and stars : Photography</h3>
               <p class="portfoliosubheads">nature and long exposure photographs [taken with Nikon D90 camera] </p>
             </div>
-            <div class="portfoliocontent">
+            <div class="portfoliocontent portfolio-content">
               <div class="grid">
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/nature/nature1.jpg" class="portimages">
+                  <img src="images/nature/nature1.jpg" class="portimages" alt="photo of super moon 2015">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/nature/nature2.jpg" class="portimages">
+                  <img src="images/nature/nature2.jpg" class="portimages" alt="photo of super moon 2015">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/nature/nature3.jpg" class="portimages">
+                  <img src="images/nature/nature3.jpg" class="portimages" alt="photo of sunset and field">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/nature/nature4.jpg" class="portimages">
+                  <img src="images/nature/nature4.jpg" class="portimages" alt="photo of foggy river and stars">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/nature/nature5.jpg" class="portimages">
+                  <img src="images/nature/nature5.jpg" class="portimages" alt="photo of sunset over river">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/nature/nature6.jpg" class="portimages">
+                  <img src="images/nature/nature6.jpg" class="portimages" alt="photo of orange trees and stars">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/nature/nature7.jpg" class="portimages">
+                  <img src="images/nature/nature7.jpg" class="portimages" alt="photo of starry sky">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/nature/nature8.jpg" class="portimages">
+                  <img src="images/nature/nature8.jpg" class="portimages" alt="photo of starry sky and river">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/nature/nature9.jpg" class="portimages">
+                  <img src="images/nature/nature9.jpg" class="portimages" alt="photo of sunset over river">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/nature/nature10.jpg" class="portimages">
+                  <img src="images/nature/nature10.jpg" class="portimages" alt="photo of starry sky and river">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/nature/nature11.jpg" class="portimages">
+                  <img src="images/nature/nature11.jpg" class="portimages" alt="photo of starry sky and clouds">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/nature/nature12.jpg" class="portimages">
+                  <img src="images/nature/nature12.jpg" class="portimages" alt="photo of stars over river and shooting star">
                 </div>
               </div>
             </div>
@@ -327,45 +342,24 @@ layout: default
         <div class="unit text">
             <div class="portfolio-title-div">
               <h3 class="unit portfolio-title">Abstract Poster Design</h3>
-              <p class="portfoliosubheads">self abstract poster project created with photograhs and pen and ink</p>
+              <p class="portfoliosubheads">databending image applied to movie poster for 2001 : a space oddyssey</p>
             </div>
-            <div class="portfoliocontent">
+            <div class="portfoliocontent portfolio-content">
               <div class="grid">
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-                  <img src="images/poster/2.jpg" class="portimages">
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/2001/2.jpg" class="portimages" alt="image code for data bending">
                 </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-                  <img src="images/poster/0.jpg" class="portimages">
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/2001/1.jpg" class="portimages" alt="image created from date bending">
                 </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-                  <img src="images/poster/3.jpg" class="portimages">
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">
+                  <img src="images/2001/posterfull.jpg" class="portimages" alt="full poster design">
                 </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-                  <img src="images/poster/4.jpg" class="portimages">
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/2001/poster1.jpg" class="portimages" alt="poster application">
                 </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-                  <img src="images/poster/5.jpg" class="portimages">
-                </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-                  <img src="images/poster/6.jpg" class="portimages">
-                </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-                  <img src="images/poster/7.jpg" class="portimages">
-                </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-                  <img src="images/poster/8.jpg" class="portimages">
-                </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-                  <img src="images/poster/10.jpg" class="portimages">
-                </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-                  <img src="images/poster/11.jpg" class="portimages">
-                </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-                  <img src="images/poster/12.jpg" class="portimages">
-                </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-                  <img src="images/poster/13.jpg" class="portimages">
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/2001/poster2.jpg" class="portimages" alt="second poster application">
                 </div>
               </div>
             </div>
