Finished adding photos to portfolio pieces and added all missing alt tags

--- a/index.html
+++ b/index.html
@@ -375,33 +375,39 @@ layout: default
               <h3 class="unit portfolio-title">4 Articles 1 Concept</h3>
               <p class="portfoliosubheads">magazine spreads created for typography class [own photography used]</p>
             </div>
-            <div class="portfoliocontent">
+            <div class="portfoliocontent portfolio-content">
               <div class="grid">
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/spreads/spread1.jpg" class="portimages">
+                  <img src="images/spreads/spread1.jpg" class="portimages" alt="spread page 1-2 pink">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/spreads/spread2.jpg" class="portimages">
+                  <img src="images/spreads/spread2.jpg" class="portimages" alt="spread page 3-4 pink">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/spreads/spread3.jpg" class="portimages">
+                  <img src="images/spreads/spread3.jpg" class="portimages" alt="spread page 1-2 green">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/spreads/spread4.jpg" class="portimages">
+                  <img src="images/spreads/spread4.jpg" class="portimages" alt="spread page 3-4 green">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/spreads/spread5.jpg" class="portimages">
+                  <img src="images/spreads/spread5.jpg" class="portimages" alt="spread page 1-2 blue">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/spreads/spread6.jpg" class="portimages">
+                  <img src="images/spreads/spread6.jpg" class="portimages" alt="spread page 3-4 blue">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/spreads/spread7.jpg" class="portimages">
+                  <img src="images/spreads/spread7.jpg" class="portimages" alt="spread page 1-2 purple">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/spreads/spread8.jpg" class="portimages">
+                  <img src="images/spreads/spread8.jpg" class="portimages" alt="spread page 3-4 purple">
                 </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/spreads/application1.jpg" class="portimages" alt="spread application one">
                 </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/spreads/application2.jpg" class="portimages" alt="spread application two">
+                </div>
+              </div>
             </div>
         </div>
       </div>
@@ -415,19 +421,25 @@ layout: default
               <h3 class="unit portfolio-title">Ragtime Re-Branding</h3>
               <p class="portfoliosubheads">re-branded and created full brand guideline for ottawa shop in graphic design class</p>
             </div>
-            <div class="portfoliocontent">
+            <div class="portfoliocontent portfolio-content">
               <div class="grid">
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/ragtime/ragtime1.jpg" class="portimages">
+                  <img src="images/ragtime/ragtime1.jpg" class="portimages" alt="ragtime logo proper colour use guideline">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/ragtime/ragtime2.jpg" class="portimages">
+                  <img src="images/ragtime/ragtime2.jpg" class="portimages" alt="ragtime logo correct spot color">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/ragtime/ragtime3.jpg" class="portimages">
+                  <img src="images/ragtime/ragtime3.jpg" class="portimages" alt="ragtime logo correct font and size">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/ragtime/ragtime4.jpg" class="portimages">
+                  <img src="images/ragtime/ragtime4.jpg" class="portimages" alt="ragtime logo proper buffer zone">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">
+                  <img src="images/ragtime/application1.jpg" class="portimages" alt="ragtime logo application one">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">
+                  <img src="images/ragtime/application2.jpg" class="portimages" alt="ragtime logo application two">
                 </div>
               </div>
             </div>
