Added more process photos and alt tags to go along with them to some pieces.

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ layout: default
           <div class="portfolio-title-div">
             <h3 class="portfolio-title">Robotic Sight</h3>
             <p class="portfoliosubheads">Clothing design made from redbubble.com</p>
+            <p class="portfoliosubheads">drew out a geometric line drawing using pen and paper. popped it into Illustrator and vectorized it. With copying and adding more vector lines and circles, I came up with this robotic looking set of eyes.</p>
           </div>
           <div class="portfolio-content">
             <div class="grid">
@@ -110,7 +111,8 @@ layout: default
           <div class="unit text">
             <div class="portfolio-title-div">
               <h3 class="unit portfolio-title">Old James</h3>
-              <p class="portfoliosubheads">logo Re-Brand for Toronto/Ottawa band</p>
+              <p class="portfoliosubheads">logo t-shirt design for Toronto/Ottawa band</p>
+              <p class="portfoliosubheads">the goal for this t-shirt design was most importantly to incorporate the dharmachakra. to have all 8 spokes showing, incorporate some lotus flowers, all lunar phases, and to have the band name as a secondary part of the piece.</p>
             </div>
             <div class="portfoliocontent portfolio-content">
               <div class="grid">
@@ -152,7 +154,8 @@ layout: default
         <div class="unit text">
             <div class="portfolio-title-div">
               <h3 class="unit portfolio-title">Trunk album cover &amp; booklet design</h3>
-              <p class="portfoliosubheads">digital art pieces made in Illustrator for Ottawa band album cover and booklet</p>
+              <p class="portfoliosubheads">created for Ottawa band album cover and booklet</p>
+              <p class="portfoliosubheads">objective was to create a piece of digital art for each song on the album, specific to the vibe and aesthetic of the song. I then had to incorporate each piece of art on to the front cover in a way it would all flow together. I used my own photography and edited and manipulated it using a combination of Lightroom, Illustrator, and Photoshop.</p>
             </div>
             <div class="portfoliocontent portfolio-content">
               <div class="grid">
@@ -212,8 +215,9 @@ layout: default
         </a>
         <div class="unit text">
             <div class="portfolio-title-div">
-              <h3 class="unit portfolio-title">Liquid Happiness : Wine &amp; liquor Bottle Brand</h3>
-              <p class="portfoliosubheads">Future personal brand for self liquor and wine making</p>
+              <h3 class="unit portfolio-title">Liquid Happiness : alcohol Bottle Brand</h3>
+              <p class="portfoliosubheads">created for wine and liquor</p>
+              <p class="portfoliosubheads">created this alcohol brand by making a custom label on a wine bottle for a friend as a gift. after sketches and mockups, I put this version in Illustrator and tweaked it until satisfied. planning to use this label in the future for personal wine/liquor making. </p>
             </div>
             <div class="portfoliocontent portfolio-content">
               <div class="grid">
@@ -255,11 +259,24 @@ layout: default
         </a>
         <div class="unit text">
             <div class="portfolio-title-div">
-              <h3 class="unit portfolio-title">Haunt : Photography</h3>
-              <p class="portfoliosubheads">Photograph series mirroring the haunting of human fears [taken with Polaroid camera] </p>
+              <h3 class="unit portfolio-title">Haunt : Photography series</h3>
+              <p class="portfoliosubheads">concept and photographs : jess paget // help and model : amelinda everett</p>
+              <p class="portfoliosubheads">series created to portray the haunting feelings of guilt, fear, anxiety, or anything that may haunt a human in their daily life. I chose to take these photos with my Polaroid camera instead of my SLR because it leaves the photos looking old, grainy, and even a little bit dingy which fit the series perfectly. I then edited using Lightroom.</p>
             </div>
             <div class="portfoliocontent portfolio-content">
               <div class="grid">
+               <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+                  <img src="images/haunt/process1.jpg"class="portimages" alt="process photo/model putting sheet on">
+                </div>
+               <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+                  <img src="images/haunt/process2.jpg"class="portimages" alt="process photo/polaroid developing">
+                </div>
+               <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+                  <img src="images/haunt/process3.jpg"class="portimages" alt="process photo/taking a break">
+                </div>
+               <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+                  <img src="images/haunt/process4.jpg"class="portimages" alt="process photo/setting up spider webs">
+                </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
                   <img src="images/haunt/haunt1.jpg" class="portimages" alt="photo of ghost like figure in bushes">
                 </div>
@@ -289,11 +306,24 @@ layout: default
         </a>
         <div class="unit text">
             <div class="portfolio-title-div">
-              <h3 class="unit portfolio-title">Sun, moon, and stars : Photography</h3>
-              <p class="portfoliosubheads">nature and long exposure photographs [taken with Nikon D90 camera] </p>
+              <h3 class="unit portfolio-title">Sun, moon, and stars : Photography series</h3>
+              <p class="portfoliosubheads">nature and long exposure photographs</p>
+              <p class="portfoliosubheads">over the spring, summer, and fall I have acquired a series of photographs of the wonders of the sky. from cottage trips, the super moon/eclipse, and just breath taking sunsets. most of them using long exposure setting on my Nikon D90.</p>
             </div>
             <div class="portfoliocontent portfolio-content">
               <div class="grid">
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+                  <img src="images/nature/photo1.jpg" class="portimages" alt="behind the scene photo one">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+                  <img src="images/nature/photo2.jpg" class="portimages" alt="behind the scene photo two">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+                  <img src="images/nature/photo3.jpg" class="portimages" alt="behind the scene photo three">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+                  <img src="images/nature/photo4.jpg" class="portimages" alt="behind the scene photo four">
+                </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
                   <img src="images/nature/nature1.jpg" class="portimages" alt="photo of super moon 2015">
                 </div>
@@ -341,8 +371,9 @@ layout: default
         </a>
         <div class="unit text">
             <div class="portfolio-title-div">
-              <h3 class="unit portfolio-title">Abstract Poster Design</h3>
-              <p class="portfoliosubheads">databending image applied to movie poster for 2001 : a space oddyssey</p>
+              <h3 class="unit portfolio-title">2001 : a space odyssey movie poster</h3>
+              <p class="portfoliosubheads">databending application</p>
+              <p class="portfoliosubheads">took a jpeg2000 and brought it into text edit and changed around the coding of the photograph to end up with the background of this poster. I then chose a movie poster to re-create to use the photo in a way that would accurately portray it. Added the shapes and text in Illustrator.</p>
             </div>
             <div class="portfoliocontent portfolio-content">
               <div class="grid">
@@ -373,10 +404,23 @@ layout: default
         <div class="unit text">
             <div class="portfolio-title-div">
               <h3 class="unit portfolio-title">4 Articles 1 Concept</h3>
-              <p class="portfoliosubheads">magazine spreads created for typography class [own photography used]</p>
+              <p class="portfoliosubheads">multi-page magazine design</p>
+              <p class="portfoliosubheads">the goal for this piece was to take four separate articles and create a multi-page document with the same theme applied to all. used my own photography for all articles and created using inDesign. assigned in class at Algonquin College - Graphic Design.</p>
             </div>
             <div class="portfoliocontent portfolio-content">
               <div class="grid">
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+                  <img src="images/spreads/photo1.jpg" class="portimages" alt="original article photo one">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+                  <img src="images/spreads/photo2.jpg" class="portimages" alt="original article photo two">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+                  <img src="images/spreads/photo3.jpg" class="portimages" alt="original article photo three">
+                </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+                  <img src="images/spreads/photo4.jpg" class="portimages" alt="original article photo four">
+                </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
                   <img src="images/spreads/spread1.jpg" class="portimages" alt="spread page 1-2 pink">
                 </div>
@@ -418,8 +462,9 @@ layout: default
         </a>
         <div class="unit text">
             <div class="portfolio-title-div">
-              <h3 class="unit portfolio-title">Ragtime Re-Branding</h3>
-              <p class="portfoliosubheads">re-branded and created full brand guideline for ottawa shop in graphic design class</p>
+              <h3 class="unit portfolio-title">Ragtime Vintage Clothing</h3>
+              <p class="portfoliosubheads">logo re-design</p>
+              <p class="portfoliosubheads"> the goal for this project was to take an exsisting logo and to re-vamp it to reflect the brand as best as it can. I re-branded and then created full brand guideline for ottawa vintage clothing shop in graphic design class</p>
             </div>
             <div class="portfoliocontent portfolio-content">
               <div class="grid">
