fixed first portfolio piece and added different images.

--- a/index.html
+++ b/index.html
@@ -70,34 +70,37 @@ layout: default
         </a>
         <div class="text">
           <div class="portfolio-title-div">
-            <h3 class="portfolio-title">Robotic Sight</h3>
-            <p class="portfoliosubheads">Clothing design made from redbubble.com</p>
-            <p class="portfoliosubheads">drew out a geometric line drawing using pen and paper. popped it into Illustrator and vectorized it. With copying and adding more vector lines and circles, I came up with this robotic looking set of eyes.</p>
+            <h3 class="portfolio-title">Dream Glasses</h3>
+            <p class="portfoliosubheads">Illustration print series</p>
+            <p class="portfoliosubheads">Initial illustrations were done with pen and ink in my sketchbook.  Bringing those drawings into illustrator and vectorized them, I then played around with copies of each and added more shapes and lines to pull the final illustration together. I put these designs into redbubble.com and society6.com for the item application.</p>
           </div>
           <div class="portfolio-content">
             <div class="grid">
-              <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-                <img src="images/yellow/1.jpg" class="portimages" alt="line drawing scanned from sketchbook">
+              <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+                <img src="images/yellow/eyesblue.jpg" class="portimages" alt="line drawing with blue background">
               </div>
-              <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-                <img src="images/yellow/2.jpg" class="portimages" alt="line drawing vectorized with yellow background">
+              <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+                <img src="images/yellow/pink.jpg" class="portimages" alt="line drawing with pink background">
               </div>
-              <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
-                <img src="images/yellow/face.jpg" class="portimages" alt="vectorized drawing edited and shapes added">
+              <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+                <img src="images/yellow/yellow.jpg" class="portimages" alt="line drawing with yellow background">
+              </div>
+              <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+                <img src="images/yellow/eyesgreen.jpg" class="portimages" alt="line drawing with green background">
               </div>
             </div>
             <div class="grid">
               <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                <img src="images/yellow/leggings.jpg" class="portimages" alt="design placed on women's leggings">
+                <img src="images/yellow/pillow.jpg" class="portimages" alt="design placed on throw pillow">
+              </div>
+              <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                <img src="images/yellow/tshirt.jpg" class="portimages" alt="design placed on yellow tshirt">
+              </div>
+              <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                <img src="images/yellow/shirt.jpg" class="portimages" alt="design placed on long sleeve shirt">
               </div>
               <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
                 <img src="images/yellow/scarf.jpg" class="portimages" alt="design placed on scarf">
-              </div>
-              <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                <img src="images/yellow/skirt.jpg" class="portimages" alt="design placed on pencil skirt">
-              </div>
-              <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                <img src="images/yellow/tshirt.jpg" class="portimages" alt="design placed on tshirt">
               </div>
             </div>
           </div>
