--- a/index.html
+++ b/index.html
@@ -119,24 +119,22 @@ layout: default
             </div>
             <div class="portfoliocontent portfolio-content">
               <div class="grid">
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3">
                   <img src="images/oldjames/oldj1.jpg" class="portimages" alt="old james logo version one">
                 </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3">
                   <img src="images/oldjames/sketch1.jpg" class="portimages" alt="old james logo edits">
                 </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3">
                   <img src="images/oldjames/oldj2.jpg" class="portimages" alt="old james logo version two">
                 </div>
-              </div>
-              <div class="grid">
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3">
                   <img src="images/oldjames/oldj3.jpg" class="portimages" alt="old james logo version three">
                 </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3">
                   <img src="images/oldjames/sketch.jpg" class="portimages" alt="old james logo final sketch">
                 </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3">
                   <img src="images/oldjames/oldj4.jpg" class="portimages" alt="old james logo final version">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
@@ -162,16 +160,16 @@ layout: default
             </div>
             <div class="portfoliocontent portfolio-content">
               <div class="grid">
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+                <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-4 unit-l-1-4">
                   <img src="images/trunk/process1.jpg" class="portimages" alt="album art process one">
                 </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+                <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-4 unit-l-1-4">
                   <img src="images/trunk/process2.jpg" class="portimages" alt="album art process two">
                 </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+                <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-4 unit-l-1-4">
                   <img src="images/trunk/process3.jpg" class="portimages" alt="album art process three">
                 </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+                <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-4 unit-l-1-4">
                   <img src="images/trunk/process4.jpg" class="portimages" alt="album art process four">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
@@ -224,10 +222,10 @@ layout: default
             </div>
             <div class="portfoliocontent portfolio-content">
               <div class="grid">
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3">
                   <img src="images/liquidhappiness/sketches-1.jpg" class="portimages" alt="liquid happiness sketches">
                 </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+                <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-3 unit-l-1-3">
                   <img src="images/liquidhappiness/mockups.jpg" class="portimages" alt="liquid happiness mockups">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
@@ -268,16 +266,16 @@ layout: default
             </div>
             <div class="portfoliocontent portfolio-content">
               <div class="grid">
-               <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+               <div class="unit unit-xs-12 unit-s-1-2 unit-m-1-4 unit-l-1-4">
                   <img src="images/haunt/process1.jpg"class="portimages" alt="process photo/model putting sheet on">
                 </div>
-               <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+               <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-4 unit-l-1-4">
                   <img src="images/haunt/process2.jpg"class="portimages" alt="process photo/polaroid developing">
                 </div>
-               <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+               <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-4 unit-l-1-4">
                   <img src="images/haunt/process3.jpg"class="portimages" alt="process photo/taking a break">
                 </div>
-               <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+               <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-4 unit-l-1-4">
                   <img src="images/haunt/process4.jpg"class="portimages" alt="process photo/setting up spider webs">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
@@ -298,6 +296,9 @@ layout: default
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
                   <img src="images/haunt/haunt6.jpg" class="portimages" alt="photo of ghost like figure in front of concrete tunnel">
                 </div>
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">
+                  <img src="images/haunt/polaroid.jpg" class="portimages" alt="photo of polaroid paper with photos on them">
+                </div>
               </div>
             </div>
         </div>
@@ -315,16 +316,16 @@ layout: default
             </div>
             <div class="portfoliocontent portfolio-content">
               <div class="grid">
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+                <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-4 unit-l-1-4">
                   <img src="images/nature/photo1.jpg" class="portimages" alt="behind the scene photo one">
                 </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+                <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-4 unit-l-1-4">
                   <img src="images/nature/photo2.jpg" class="portimages" alt="behind the scene photo two">
                 </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+                <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-4 unit-l-1-4">
                   <img src="images/nature/photo3.jpg" class="portimages" alt="behind the scene photo three">
                 </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+                <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-4 unit-l-1-4">
                   <img src="images/nature/photo4.jpg" class="portimages" alt="behind the scene photo four">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
@@ -412,16 +413,16 @@ layout: default
             </div>
             <div class="portfoliocontent portfolio-content">
               <div class="grid">
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+                <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-4 unit-l-1-4">
                   <img src="images/spreads/photo1.jpg" class="portimages" alt="original article photo one">
                 </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+                <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-4 unit-l-1-4">
                   <img src="images/spreads/photo2.jpg" class="portimages" alt="original article photo two">
                 </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+                <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-4 unit-l-1-4">
                   <img src="images/spreads/photo3.jpg" class="portimages" alt="original article photo three">
                 </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+                <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-4 unit-l-1-4">
                   <img src="images/spreads/photo4.jpg" class="portimages" alt="original article photo four">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
